<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<commons.version>0.1.1-SNAPSHOT</commons.version>
		<!-- JBoss settings -->
		<jboss.http.port>8080</jboss.http.port>
		<server.config.directory>${work.dir}/config</server.config.directory>
		<server.data.directory>${work.dir}/data</server.data.directory>
		<jboss.debug.options>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</jboss.debug.options>
		<jboss.memory.options>-Xms128m -Xmx512m -XX:MaxPermSize=256m</jboss.memory.options>
		<jboss.options>${jboss.memory.options} ${jboss.debug.options}</jboss.options>
		<!-- JBoss -->
		<jboss.version>7.2.0.Final</jboss.version>
		<resteasy.version>2.3.4.Final</resteasy.version>
		<!-- Arquillian -->
		<arquillian.version>1.1.2.Final</arquillian.version>
		<arquillian.test.dir>${project.build.directory}/jboss</arquillian.test.dir>
		<!-- Cargo -->
		<cargo.dir>${work.dir}/cargo</cargo.dir>
		<cargo.logging>medium</cargo.logging>
	</properties>

	<groupId>com.puresoltechnologies.purifinity.server</groupId>
	<artifactId>parent</artifactId>
	<version>0.1.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Purifinity's Server Implementation</name>
	<description>In this module and all its sub-modules server components are included..</description>

	<inceptionYear>2009</inceptionYear>
	<url>http://puresol-technologies.com</url>

	<organization>
		<name>PureSol Technologies</name>
		<url>http://puresol-technologies.com</url>
	</organization>

	<licenses>
		<license>
			<name>PureSol Technologies Commercial License</name>
		</license>
	</licenses>

	<scm>
		<developerConnection>scm:git:git@git:Purifinity</developerConnection>
		<connection>scm:git:git@git:Purifinity</connection>
		<url>http://git/gitweb/</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Rick-Rainer Ludwig</name>
			<email>ludwig@puresol-technologies.com</email>
			<organization>PureSol Technologies</organization>
			<organizationUrl>http://puresol-technologies.com</organizationUrl>
			<url>http://rick-rainer-ludwig.com</url>
		</developer>
	</developers>

	<issueManagement>
		<system>Redmine</system>
		<url>https://bugs.puresol-technologies.net/projects/license-maven-plugin</url>
	</issueManagement>

	<ciManagement>
		<system>Jenkins</system>
		<url>https://travis-ci.org/RickRainerLudwig/license-maven-plugin</url>
	</ciManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://repo/libs-release</url>
		</repository>
		<repository>
			<snapshots />
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>http://repo/libs-snapshot</url>
		</repository>
		<repository>
			<id>JBoss</id>
			<name>JBoss</name>
			<url>https://repository.jboss.org/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>plugins-release</name>
			<url>http://repo/plugins-release</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots />
			<id>snapshots</id>
			<name>plugins-snapshot</name>
			<url>http://repo/plugins-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>it</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<forkMode>always</forkMode>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<!-- ================ -->
			<!-- Project internal -->
			<!-- ================ -->
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>database.cassandra.utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>database.cassandra.setup</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>database.titan.utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>jboss.configuration</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- Server -->
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>database.cassandra.utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>eventlogger.core.api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>eventlogger.core.impl</artifactId>
				<version>${project.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>jboss.test</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.purifinity.server</groupId>
				<artifactId>logger</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- PureSol Technologies -->
			<dependency>
				<groupId>com.puresoltechnologies.commons</groupId>
				<artifactId>utils</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- =========================== -->
			<!-- Specific external libraries -->
			<!-- =========================== -->
			<dependency>
				<groupId>com.datastax.cassandra</groupId>
				<artifactId>cassandra-driver-core</artifactId>
				<version>2.0.0-rc2</version>
			</dependency>
			<dependency>
				<groupId>com.thinkaurelius.titan</groupId>
				<artifactId>titan-core</artifactId>
				<version>0.4.1</version>
			</dependency>
			<dependency>
				<groupId>com.thinkaurelius.titan</groupId>
				<artifactId>titan-cassandra</artifactId>
				<version>0.4.1</version>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>6.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-io</artifactId>
				<version>1.3.2</version>
			</dependency>
			<!-- JBoss -->
			<dependency>
				<groupId>org.jboss.as</groupId>
				<artifactId>jboss-as-server</artifactId>
				<version>${jboss.version}</version>
				<scope>provided</scope>
			</dependency>
			<!-- REST library -->
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxrs</artifactId>
				<version>${resteasy.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>jaxrs-api</artifactId>
				<version>${resteasy.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-jaxrs</artifactId>
				<version>1.9.2</version>
				<scope>provided</scope>
			</dependency>
			<!-- Arquillian -->
			<dependency>
				<groupId>org.jboss.arquillian.junit</groupId>
				<artifactId>arquillian-junit-container</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.core</groupId>
				<artifactId>arquillian-core-spi</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.protocol</groupId>
				<artifactId>arquillian-protocol-servlet</artifactId>
				<version>${arquillian.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.as</groupId>
				<artifactId>jboss-as-arquillian-container-managed</artifactId>
				<version>${jboss.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.6.6</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.7.2</version>
				<scope>provided</scope>
			</dependency>
			<!-- Testing -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cassandra-maven-plugin</artifactId>
					<version>2.0.0-1</version>
					<executions>
						<execution>
							<id>startCassandra</id>
							<inherited>true</inherited>
							<phase>pre-integration-test</phase>
							<goals>
								<goal>start</goal>
							</goals>
						</execution>
						<execution>
							<id>stopCassandra</id>
							<inherited>true</inherited>
							<phase>post-integration-test</phase>
							<goals>
								<goal>stop</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<startNativeTransport>true</startNativeTransport>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.cargo</groupId>
					<artifactId>cargo-maven2-plugin</artifactId>
					<version>1.2.2</version>
					<executions>
						<execution>
							<id>JBoss Configuration</id>
							<phase>package</phase>
							<goals>
								<goal>configure</goal>
								<goal>deployer-deploy</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<!-- wait>false</wait -->
						<container>
							<containerId>jboss71x</containerId>
							<timeout>60000</timeout>
							<artifactInstaller>
								<groupId>org.jboss.as</groupId>
								<artifactId>jboss-as-dist</artifactId>
								<version>${jboss.version}</version>
								<type>zip</type>
								<extractDir>${cargo.dir}</extractDir>
							</artifactInstaller>
						</container>
						<configuration>
							<type>standalone</type>
							<home>${arquillian.test.dir}</home>
							<configfiles>
								<configfile>
									<file>${cargo.dir}/template/standalone/configuration/standalone.xml</file>
									<todir>configuration</todir>
								</configfile>
							</configfiles>
							<files>
								<file>
									<file>${cargo.dir}/template/standalone</file>
									<todir>/</todir>
								</file>
							</files>
							<properties>
								<cargo.jboss.configuration>default</cargo.jboss.configuration>
								<cargo.servlet.port>8080</cargo.servlet.port>
								<cargo.rmi.port>1099</cargo.rmi.port>
								<cargo.jvmargs>${jboss.jvm.options}</cargo.jvmargs>
								<cargo.servlet.port>${jboss.http.port}</cargo.servlet.port>
								<cargo.logging>${cargo.logging}</cargo.logging>
							</properties>
						</configuration>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.puresoltechnologies.maven.plugins
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.1.1,)
										</versionRange>
										<goals>
											<goal>validate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.puresoltechnologies.maven.plugins</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<recursive>true</recursive>
					<validLicenses>
						<validLicense>PureSol Technologies Commercial License</validLicense>
						<!-- Apache License -->
						<validLicense>Apache 2</validLicense>
						<validLicense>Apache License</validLicense>
						<validLicense>Apache License 2.0</validLicense>
						<validLicense>Apache License Version 2.0</validLicense>
						<validLicense>Apache License, Version 2.0</validLicense>
						<validLicense>Apache License, version 2.0</validLicense>
						<validLicense>Apache Public License 2.0</validLicense>
						<validLicense>Apache Software License - Version 2.0</validLicense>
						<validLicense>The Apache Software License, Version 2.0</validLicense>
						<!-- BSD License -->
						<validLicense>BSD</validLicense>
						<validLicense>BSD 3-Clause</validLicense>
						<validLicense>BSD License</validLicense>
						<validLicense>BSD licence</validLicense>
						<validLicense>BSD style</validLicense>
						<validLicense>ISC/BSD License</validLicense>
						<validLicense>New BSD License</validLicense>
						<!-- CDDL -->
						<validLicense>CDDL + GPLv2 with classpath exception</validLicense>
						<validLicense>CDDL v1.1 / GPL v2 dual license</validLicense>
						<validLicense>CDDL or GPLv2 with exceptions</validLicense>
						<validLicense>Common Development and Distribution License</validLicense>
						<!-- CPL -->
						<validLicense>Common Public License Version 1.0</validLicense>
						<!-- EPL -->
						<validLicense>Eclipse Public License - Version 1.0</validLicense>
						<validLicense>Eclipse Public License, Version 1.0</validLicense>
						<!-- GPL with Classpath Exception -->
						<validLicense>GPLv2 (with classpath exception)</validLicense>
						<validLicense><![CDATA[GNU General Public License, Version 2 with the Classpath Exception]]></validLicense>
						<!-- LGPL -->
						<validLicense>lgpl</validLicense>
						<validLicense>lgpl_v2_1</validLicense>
						<validLicense>LGPL 2.1</validLicense>
						<validLicense>GNU Lesser General Public License</validLicense>
						<validLicense>GNU Lesser General Public License, version 2.1</validLicense>
						<!-- MPL -->
						<validLicenses>MPL 1.1</validLicenses>
						<!-- MIT License -->
						<validLicense>MIT License</validLicense>
						<validLicense>The MIT License</validLicense>
						<validLicense>The MIT license</validLicense>
						<!-- Public Domain -->
						<validLicense>Public Domain</validLicense>
						<validLicense>Public domain, Sun Microsoystems</validLicense>
						<validLicense>provided without support or warranty</validLicense>
						<!-- Snaptree License -->
						<validLicense>SNAPTREE LICENSE</validLicense>
					</validLicenses>
					<approvedDependencies>
						<approvedDependency>commons-beanutils:commons-beanutils:1.7.0</approvedDependency>
						<approvedDependency>colt:colt:1.2.0</approvedDependency>
						<approvedDependency>javax.servlet:servlet-api:2.5</approvedDependency>
						<approvedDependency>org.apache.cassandra.deps:avro:1.4.0-cassandra-1</approvedDependency>
						<approvedDependency>org.antlr:antlr.*:.*</approvedDependency>
						<approvedDependency>org.osgi:org.osgi.*:4.2.0</approvedDependency>
						<approvedDependency>system:jdk-tools:jdk</approvedDependency>
					</approvedDependencies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ear-plugin</artifactId>
				<configuration>
					<version>6</version>
					<defaultLibBundleDir>lib</defaultLibBundleDir>
					<skinnyWars>true</skinnyWars>
					<applicationName>${project.artifactId}</applicationName>
					<fileNameMapping>no-version</fileNameMapping>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Build-Number>${build.number}</Build-Number>
							<Build-SCM>${build.scm}</Build-SCM>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
						<manifestEntries>
							<Build-Number>${build.number}</Build-Number>
							<Build-SCM>${build.scm}</Build-SCM>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ejb-plugin</artifactId>
				<configuration>
					<ejbVersion>3.1</ejbVersion>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Build-Number>${build.number}</Build-Number>
							<Build-SCM>${build.scm}</Build-SCM>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>database</module>
		<module>jboss</module>
		<module>logger</module>
		<module>eventlogger</module>
	</modules>

</project>
